FIX: show page style improved, added spacing and removed size change in icons and label in new comment box

--- a/app/assets/stylesheets/components/_comments.scss
+++ b/app/assets/stylesheets/components/_comments.scss
@@ -6,10 +6,6 @@
 
 }
 
-.name-comment {
-}
-
-
 .edit-delete a {
   text-decoration: none;
   color: #a1a1a1;
@@ -28,4 +24,8 @@
 
 .form-control {
     width: 100%;
+}
+
+.new-comment-btn {
+  margin-bottom: 15px;
 }
