--- a/app/assets/stylesheets/components/_details.scss
+++ b/app/assets/stylesheets/components/_details.scss
@@ -20,6 +20,8 @@ img {
   font-size: 28px;
   font-family: Montserrat, sans-serif;
   font-weight: 600;
+  line-height: 26px;
+  margin-bottom: 4px;
 }
 
 .artist-name {
@@ -31,8 +33,11 @@ img {
 .fave-save {
   display: flex;
   justify-content: space-between;
-  font-size: 28px;
   width: 60px;
+}
+
+.fave-save-icon i {
+  font-size: 28px;
 }
 
 .description {
@@ -40,6 +45,7 @@ img {
   font-size: 1em;
   font-family: Lato, sans-serif;
   font-weight: 400;
+  margin-bottom: 32px;
 }
 
 .navbar-icon {
